--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 alabaster==0.7.12
+altgraph==0.17
 anaconda-client==1.7.2
 anaconda-navigator==1.9.12
 anaconda-project==0.8.3
 argh==0.26.2
 asn1crypto @ file:///C:/ci/asn1crypto_1594339244757/work
-astroid @ file:///C:/ci/astroid_1592481955828/work
+astroid==2.4.2
 astropy==4.0.1.post1
 atomicwrites==1.4.0
 attrs==19.3.0
+Automat==20.2.0
 autopep8 @ file:///tmp/build/80754af9/autopep8_1592412889138/work
 Babel==2.8.0
 backcall==0.2.0
@@ -36,8 +38,10 @@ conda==4.8.3
 conda-build==3.18.9
 conda-package-handling==1.7.0
 conda-verify==3.4.2
+constantly==15.1.0
 contextlib2==0.6.0.post1
 cryptography==2.9.2
+cssselect==1.1.0
 cycler==0.10.0
 Cython @ file:///C:/ci/cython_1594834055134/work
 cytoolz==0.10.1
@@ -61,22 +65,28 @@ gmpy2==2.0.8
 greenlet==0.4.16
 h5py==2.10.0
 HeapDict==1.0.1
+html2json==0.2.4.1
 html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
+hyperlink==20.0.1
 hypothesis @ file:///tmp/build/80754af9/hypothesis_1593435550167/work
 idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
 imagesize==1.2.0
 importlib-metadata @ file:///C:/ci/importlib-metadata_1593446525189/work
+incremental==17.5.0
 intervaltree @ file:///tmp/build/80754af9/intervaltree_1594361675072/work
 ipykernel==5.1.2
 ipython @ file:///C:/ci/ipython_1593433781269/work
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-isort==4.3.21
+isort==5.4.2
+itemadapter==0.1.0
+itemloaders==1.0.2
 itsdangerous==1.1.0
 jdcal==1.4.1
 jedi @ file:///C:/ci/jedi_1592833832328/work
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
 json5==0.9.5
 jsonschema @ file:///C:/ci/jsonschema_1594363671836/work
@@ -127,12 +137,14 @@ packaging==20.4
 pandas @ file:///C:/ci/pandas_1592841747005/work
 pandocfilters==1.4.2
 paramiko==2.7.1
+parsel==1.6.0
 parso==0.7.0
 partd==1.1.0
 path==13.1.0
 pathlib2 @ file:///C:/ci/pathlib2_1594381094851/work
 pathtools==0.1.2
 patsy==0.5.1
+pefile==2019.4.18
 pep8==1.7.1
 pexpect @ file:///C:/ci/pexpect_1594383465186/work
 pickleshare @ file:///C:/ci/pickleshare_1594374056827/work
@@ -142,22 +154,29 @@ pluggy==0.13.1
 ply==3.11
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
+Protego==0.1.16
 psutil==5.7.0
 py @ file:///tmp/build/80754af9/py_1593446248552/work
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 PyAudio==0.2.11
 pycodestyle==2.6.0
 pycosat==0.6.3
 pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 pycrypto==2.6.1
 pycurl==7.43.0.5
+PyDispatcher==2.0.5
 pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1592848020240/work
 pyflakes==2.2.0
 Pygments==2.6.1
-pylint @ file:///C:/ci/pylint_1592487534522/work
+PyHamcrest==2.0.2
+PyInstaller==3.6
+pylint==2.6.0
 PyNaCl @ file:///C:/ci/pynacl_1595009241355/work
 pyodbc===4.0.0-unsupported
 pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
 pyparsing==2.4.7
+pyquery==1.4.1
 pyreadline==2.1
 pyrsistent==0.16.0
 PySimpleGUI==4.26.0
@@ -183,6 +202,7 @@ QDarkStyle==2.8.1
 QtAwesome==0.7.2
 qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
 QtPy==1.9.0
+queuelib==1.5.0
 regex @ file:///C:/ci/regex_1593435644645/work
 requests @ file:///tmp/build/80754af9/requests_1592841827918/work
 rope==0.17.0
@@ -191,8 +211,10 @@ ruamel-yaml==0.15.87
 scikit-image==0.16.2
 scikit-learn @ file:///C:/ci/scikit-learn_1592847564598/work
 scipy @ file:///C:/ci/scipy_1592916958183/work
+Scrapy==2.3.0
 seaborn==0.10.1
 Send2Trash==1.5.0
+service-identity==18.1.0
 simpleaudio==1.0.4
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
@@ -220,16 +242,18 @@ tblib==1.6.0
 terminado==0.8.3
 testpath==0.4.4
 threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
+toml==0.10.1
 toolz==0.10.0
 tornado==6.0.4
 tqdm @ file:///tmp/build/80754af9/tqdm_1593446365756/work
 traitlets==4.3.3
+Twisted==20.3.0
 typed-ast==1.4.1
 typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/work
 ujson==1.35
 unicodecsv==0.14.1
 urllib3==1.25.9
+w3lib==1.22.0
 watchdog @ file:///C:/ci/watchdog_1593446515400/work
 wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
@@ -239,7 +263,7 @@ widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 win-unicode-console==0.5
 wincertstore==0.2
-wrapt==1.11.2
+wrapt==1.12.1
 xlrd==1.2.0
 XlsxWriter==1.2.9
 xlwings==0.19.5
